--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 :root {
+  --background-site: #242424;
+  --background-footer: #060606;
+  --gold: #9c7e30;
+  --white: #e6e6e6;
+  --grey: #bbb;
 }
 
 * {
@@ -9,13 +14,14 @@
 
 html {
   font-size: 16px;
+  scroll-behavior: smooth;
+  background: var(--background-site);
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-
   font-size: 1rem;
   line-height: 1.25;
 }
@@ -31,7 +37,60 @@ video {
   vertical-align: middle;
 }
 
-.row + .row,
+.main-image {
+  max-width: 80px;
+}
+
+.main-image-container {
+  width: 100%;
+  height: 480px;
+  /* background-position: center;
+  background-size: cover;
+  background-attachment: fixed; */
+  background-image: url(../img/resto.png);
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.image-ev-container {
+  overflow: hidden;
+}
+
+.image-ev {
+  height: 320px;
+  width: 100%;
+  object-fit: cover;
+}
+
+h2 {
+  color: #9c7e30;
+  font-family: "Italiana", sans-serif;
+  font-size: 49px;
+  font-weight: 400;
+  line-height: 56px;
+}
+
+h3 {
+  color: #e6e6e6;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+p {
+  color: var(--grey);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 33px;
+}
+
+/* .row + .row,
 .container + .container {
   margin-top: 16px;
 }
@@ -42,4 +101,4 @@ video {
   padding-bottom: 12px;
   background-color: rgba(11, 0, 70, 0.15);
   border: 1px solid rgba(0, 0, 0, 0.2);
-}
+} */
