debut du burger menu

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,75 @@ video {
   vertical-align: middle;
 }
 
+.relative {
+  position: relative;
+}
+
+.burger {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+  width: 40px;
+  height: 20px;
+}
+
+.burger div {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: var(--gold);
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.burger div:nth-child(1) {
+  top: 0;
+}
+
+.burger div:nth-child(2) {
+  top: 8px;
+}
+
+.burger div:nth-child(3) {
+  top: 16px;
+}
+
+.burger.is-active div:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.burger.is-active div:nth-child(2) {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+.burger.is-active div:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+
+.menu {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s, transform 0.3s;
+  transform: translateX(100%);
+}
+
+.menu.is-active {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateX(0);
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 50px;
+  background: #ccc;
+}
+
 .main-image {
 }
 
